# zfm

./: Makefile  README.md  client.cpp  client.vcxproj  client_gui.cpp  client_gui.vcxproj  cm108.c  private.h  private.rc  ptt_input_evdev.cpp  ptt_input_evdev.h  server.cpp  server.vcxproj
android/: build.gradle  local.properties  settings.gradle
android - Kopie/main/src/: client.cpp  client_gui.cpp
android/_sdk/: _note.txt
android/_sdk/SDL2/: CMakeLists.txt
android/_sdk/SDL2_ttf/: CMakeLists.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/zfm/client/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/main/: CMakeLists.txt
android/main/src/: client.cpp  client_gui.cpp  ptt_hal.h
content/server/dashboard/: admin.css  admin.html  admin.js  dashboard.css  dashboard.js  index.html  raleway.css
resource/: private.h  private.rc
